--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dreamstudio.js",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "description": "A nodejs package for interact with the stability.ai REST API",
   "main": "dist/index.js",
@@ -30,6 +30,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "cross-fetch": "^3.1.5"
+    "@types/node-fetch": "^2.6.2",
+    "form-data": "^4.0.0",
+    "node-fetch": "^3.3.0"
   }
 }
