--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/node-fetch": "^2.6.2",
+    "axios": "^1.2.2",
     "form-data": "^4.0.0",
     "node-fetch": "^3.3.0"
   }
