--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dreamstudio.js",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "description": "A nodejs package for interact with the stability.ai REST API",
   "main": "dist/index.js",
@@ -30,9 +30,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.6.2",
     "axios": "^1.2.2",
-    "form-data": "^4.0.0",
-    "node-fetch": "^3.3.0"
+    "form-data": "^4.0.0"
   }
 }
